# notification-api

./: .env  Cargo.toml  Dockerfile  README.md  build-and-push.ps1  lefthook.yml
.github/workflows/: docker-publish.yml
scripts/: bump_minor.sh
src/: main.rs
