[package]
name = "notification-api"
version = "0.2.0"
edition = "2021"
description = "Heartbeat watcher + Pushover notifier"

# (optional) ensure the compiled binary is also called `notification-api`
[[bin]]
name = "notification-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
once_cell = "1.17"
log = "0.4"
env_logger = "0.11.8"
futures = "0.3.31"
